----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-12-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.data.php: bug 854702: FORCE INDEX

2003-12-08 Garvin Hicking <embatag@supergarv.de>
    * tbl_change.php: Fixed Bug #856436 (not displaying default values)
    * lang/german*: Translations
    * left.php: Escape single quotes in single-table cases as well
      (Bug #855771)

2003-12-08 Marc Delisle  <lem9@users.sourceforge.net>
    * new language: basque, thanks to Axier Lopez (axierl@euskalerria.org)

2003-12-07 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.5.5-rc1 released

2003-12-06 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/danish: updates, thanks to Finn Sorensen (alleyman01)

2003-12-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: bug 854696: fixed a typo,
      and added some isset for a new check

2003-12-05 Garvin Hicking <weihnachtsgarv@supergarv.de>
    * libraries/transformations/text_plain__dateformat.inc.php:
      Use <dfn>-Tag to display original data to not waste display
      clarity by using hyperlinks. Original implementation also
      failed when using customized options.

2003-12-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/estonian: Updated, thanks to Alvar Soome (finsoft).
    * libraries/transformations/text_plain__dateformat.inc.php:
      patch 845690: show real data before transformation
    * left.php: bug 833790: put a workaround in place
  
2003-12-04 Garvin Hicking <grinch@supergarv.de>
    * browse_foreigner.php, mult_submits.inc.php, tbl_change.php,
      tbl_replace.php, tbl_replace_fields.php, tbl_row_delete,
      libraries/display_tbl.lib.php, libraries/display_tbl_links.lib.php:
      Multi row edit via checkboxes in browse mode is now available.
      This means, you can edit multiple records at once now.
    * tbl_row_delete.php, tbl_change.php, tbl_change.js: Fixed 
       (un)nullify() function