@@ -7,6 +7,8 @@ $Source$
 
 2003-12-09 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.data.php: bug 854702: FORCE INDEX
+    * main.php: bug 851564: backquotes on the wildcard dbname
+      when no controluser is defined
 
 2003-12-08 Garvin Hicking <embatag@supergarv.de>
     * tbl_change.php: Fixed Bug #856436 (not displaying default values)
